Prueba de pipeline automatizado

--- a/Views/Dashboard/Detalle.cshtml
+++ b/Views/Dashboard/Detalle.cshtml
@@ -9,7 +9,7 @@
 <h2>Detalle del Pendiente</h2>
 
 <div class="card p-3 mb-4 shadow">
-    <h4>Información del Documento 12121212</h4>
+    <h4>Información del Documento</h4>
     <p><strong>Tipo:</strong> @Model.TipoDocumento</p>
     <p><strong>Número:</strong> @Model.NumeroDocumento</p>
     <p><strong>Descripción:</strong> @Model.Descripcion</p>
