Prueba de pipeline automatizado 2

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Dashboard Pendientes";
 }
 
-<h2>Listado de Pendientes listado 1234</h2>
+<h2>Listado de Pendientes</h2>
 
 <table class="table">
     <thead>
