cambios en vista fixed

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -21,6 +21,9 @@
             height: 100vh;
             background-color: #343a40;
             padding-top: 20px;
+            position: fixed;
+            width: 240px;
+            left: 0;
         }
 
             .sidebar a {
@@ -78,8 +81,8 @@
             </div>
         }
 
-        <!-- Contenido principal -->
-        <div class="col-md-9 col-lg-10 p-4">
+    <!-- Contenido principal -->
+        <div class="col-md-9 col-lg-10 p-4" style="margin-left: 240px;">
             <!-- Campana de notificaciones -->
             <div class="d-flex justify-content-end align-items-center mb-3">
                 <div class="dropdown">
