cambios para la vista de historial n columna empresa y tecnico

--- a/Views/Dashboard/Crear.cshtml
+++ b/Views/Dashboard/Crear.cshtml
@@ -1,4 +1,4 @@
-@model Organizacional.Models.ViewModels.DocumentoFormViewModel
+﻿@model Organizacional.Models.ViewModels.DocumentoFormViewModel
 
 @{
     ViewData["Title"] = "Subir nuevo pendiente";
