--- a/Views/Dashboard/Crear.cshtml
+++ b/Views/Dashboard/Crear.cshtml
@@ -92,12 +92,12 @@
 
     <div class="form-group" id="grupoArchivoPrincipal">
         <label for="archivoPdf">Orden o Contrato PDF</label>
-        <input type="file" name="archivoPdf" class="form-control" accept=".pdf" />
+        <input asp-for="ArchivoPdf" type="file" class="form-control" accept=".pdf" />
     </div>
 
     <div class="form-group" id="grupoCotizacion">
         <label for="archivoCotizacionPdf">Cotización PDF (Opcional)</label>
-        <input type="file" name="archivoCotizacionPdf" class="form-control" accept=".pdf" />
+        <input asp-for="ArchivoCotizacionPdf" type="file" class="form-control" accept=".pdf" />
     </div>
 
     <button type="submit" class="btn btn-primary">Subir</button>
