--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -20,6 +20,7 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewData["Title"]</title>
+    <link href="~/css/StyleResponsive.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
@@ -55,6 +56,9 @@
 </head>
 <body>
     <div class="row g-0">
+        <button id="hamburgerBtn" onclick="document.querySelector('.sidebar').classList.toggle('show')">
+            ☰
+        </button>
         <!-- Sidebar -->
         @if (Context.Session.GetInt32("Rol") == 1) // Admin
         {
@@ -125,6 +129,7 @@
                     </ul>
                 </div>
             </div>
+            <button id="hamburgerBtn"><i class="bi bi-list"></i></button>
             <h2>@ViewData["Title"]</h2>
 
             <table class="table table-bordered mt-4">
